# quarttex_

./: .env.example  .gitignore  AGENTS.md  API_DEVICES.md  BALANCE_AND_PROFIT_FIX.md  BALANCE_FREEZING_FIX_SUMMARY.md  CALLBACK_FIX_SUMMARY.md  CLAUDE.md  DEPLOYMENT.md  DEVICE_API_DOCUMENTATION.md  FREEZING_AND_PROFIT_FIXES.md  GITHUB_SETUP.md  PROFIT_CALCULATION_FIX_SUMMARY.md  RATE_DISPLAY_GUIDE.md  README.md  RUSSIAN_BANKS_INFO.md  SETUP.md  TEST_LIMITS.md  baseline-database.bat  build-and-install-apk.sh  build-production-apk.sh  check-devices.ts  check-server.sh  commit-changes.sh  deploy-with-apk.sh  deploy.sh  dev.bat  dev.sh  docker-compose.apk-builder.yml  docker-compose.prod.yml  docker-compose.yml  fix-database.bat  fix-migration.bat  force-device-connected.ts  install-socket-io.sh  package.json  recreate-database-simple.bat  recreate-database.bat  reset-database.bat  reset-device-connection.ts  (+21 more)
.gpt/: README.md  fix-nginx-config.sh  health-check.sh  reset-database.sh  restart-services.sh  run-tests.sh  start-services.sh  stop-services.sh  test-endpoint.sh  test-frontend-page.sh  view-logs.sh
emulator/: Cargo.toml  README.md  create-test-bank-detail.sh  create-test-transaction.ts  debug-transactions.ts  test-device-code.ts
emulator/src/: api.rs  config.rs  device.rs  device_manager.rs  main.rs  notifications.rs  ui.rs  websocket.rs
merchant_emulator/: .gitignore  BANKS_ADDED.md  Cargo.toml  FIXED_ISSUES.md  FIXES_SUMMARY.md  NO_REQUISITE_ERROR_EXPLAINED.md  README.md  README_FEATURES.md  RUNNING_INSTRUCTIONS.md  build.sh  run.sh  test_device_persistence.md  test_quiet_mode.md
merchant_emulator/src/: main.rs
merchant_emulator/src/api/: callback_server.rs  client.rs  mod.rs
merchant_emulator/src/device/: api_client.rs  device_manager.rs  mod.rs  notification_emulator.rs  ping_service.rs  websocket_client.rs
merchant_emulator/src/models/: api.rs  config.rs  device.rs  merchant.rs  mod.rs  transaction.rs
merchant_emulator/src/services/: device_notification_service.rs  log_capture.rs  merchant_service.rs  mod.rs  statistics_service.rs  storage_service.rs  traffic_generator.rs
merchant_emulator/src/ui/: device_menu.rs  log_viewer.rs  menu.rs  merchant_menu.rs  mod.rs  traffic_menu.rs
(+1337 files in other folders)
