[package]
name = "merchant-emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# CLI and TUI
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"

# HTTP client and server
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = { version = "0.8", features = ["json", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Data handling
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
rand = "0.8"
once_cell = "1"
parking_lot = "0.12"
futures = "0.3"
futures-util = "0.3"

# WebSocket support
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots"] }
tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# File system
dirs = "5"

# Clipboard
# arboard = "3" # Disabled - requires X11 on Linux

[[bin]]
name = "merchant-emulator"
path = "src/main.rs"